Fix: Section title wraps with long words

--- a/src/components/CardEditor/CardEditor.scss
+++ b/src/components/CardEditor/CardEditor.scss
@@ -75,8 +75,8 @@ $font: Roboto;
 
 %description {
   min-height: 100px;
-  width: 100%;
   margin: 0;
+  width: 100%;
 }
 
 .descriptionParagraph {
@@ -98,7 +98,7 @@ $font: Roboto;
 
 .percentageNumber {
   color: #172b4d;
-  top: -3.5px;
+  top: -4px;
   left: -36px;
   font-family: Roboto;
   font-size: 12px;
