--- a/src/components/CardEditor/Section/Section.scss
+++ b/src/components/CardEditor/Section/Section.scss
@@ -14,4 +14,5 @@
 
 .sectionTitle {
   text-transform: capitalize;
+  word-break: break-all;
 }
