--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -6,7 +6,7 @@
 }
 
 .filler {
-    background-color: #5fb348;
+    background: #5fb348;
     border-radius: 10px;
     height: 100%;
     transition: all .3 ease;
